--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "db:seed-programs": "tsx prisma/seed-programs.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
