feat: Implement complete image management system
- Add image upload API endpoint with file validation
- Create ImagePicker component with three options (Upload, URL, Media Library)
- Add Media Library page with search, filter, and delete functionality
- Update program edit page to use ImagePicker for hero images
- Fix API endpoints to properly fetch and return detail page fields
- Fix Media Library modal selection to prevent page reloads
- Fix SQLite compatibility issues in media API
- Improve search functionality with client-side filtering

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "db:seed": "tsx prisma/seed.ts",
-    "db:seed-programs": "tsx prisma/seed-programs.ts"
+    "db:seed-programs": "tsx prisma/seed-programs.ts",
+    "db:seed-it-detail-content": "tsx prisma/seed-it-detail-content.ts",
+    "db:verify-and-reseed": "tsx prisma/verify-and-reseed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
