--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:verify-and-reseed": "tsx prisma/verify-and-reseed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
